test/test_units/test_kclvm/test_types/invalid_test_data/unpack/unpack_2.k
schema Person:
    name?: str

data: {str:str} | Person = {name: "Alice"}
a = {
    if True: **None
    elif False: **data
    else: **{}
}
b = {if True: **1}
